Reformatted code for better readability
- Imports
- Warnings