@@ -1,9 +1,9 @@
 package com.bs.dbperformancemetrics.service.performance.crud.create;
 
-import com.bs.dbperformancemetrics.service.mongoDB.driver.MongoDBTemplatePerformanceService;
-import com.bs.dbperformancemetrics.service.mongoDB.mongo.MongoDBMongoPerformanceService;
-import com.bs.dbperformancemetrics.service.oracle.jdbc.OracleJDBCPerformanceService;
-import com.bs.dbperformancemetrics.service.oracle.jpa.OracleJPAPerformanceService;
+import com.bs.dbperformancemetrics.service.databse.mongoDB.driver.MongoDBTemplatePerformanceService;
+import com.bs.dbperformancemetrics.service.databse.mongoDB.mongo.MongoDBMongoPerformanceService;
+import com.bs.dbperformancemetrics.service.databse.oracle.jdbc.OracleJDBCPerformanceService;
+import com.bs.dbperformancemetrics.service.databse.oracle.jpa.OracleJPAPerformanceService;
 import com.bs.dbperformancemetrics.service.performance.IDatabasePerformanceService;
 import com.bs.dbperformancemetrics.service.performance.result.PerformanceResult;
 import com.bs.dbperformancemetrics.service.performance.result.PerformanceResultGroup;
@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class PerformanceCreateService implements IPerformanceCreateService {
@@ -63,30 +62,13 @@ public class PerformanceCreateService implements IPerformanceCreateService {
 
         List<PerformanceResult> databaseDetailsAndExecutionTimes = new ArrayList<>();
 
-        long startTime = System.currentTimeMillis();
-        long endTime = System.currentTimeMillis();
+        databaseDetailsAndExecutionTimes.add(oracleJPAPerformanceService.saveUser());
 
-        startTime = System.currentTimeMillis();
+        databaseDetailsAndExecutionTimes.add(oracleJDBCPerformanceService.saveUser());
 
-        startTime = System.currentTimeMillis();
-        //databaseDetailsAndExecutionTimes.add(oracleJPAPerformanceService.saveUser());
-        endTime = System.currentTimeMillis();
-        System.out.println("JPA TOTAL: " + (endTime - startTime) / 1000.0 + " segundos");
-
-        startTime = System.currentTimeMillis();
-        //databaseDetailsAndExecutionTimes.add(oracleJDBCPerformanceService.saveUser());
-        endTime = System.currentTimeMillis();
-        System.out.println("JDBC TOTAL: " + (endTime - startTime) / 1000.0 + " segundos");
-
-        startTime = System.currentTimeMillis();
         databaseDetailsAndExecutionTimes.add(mongoDBMongoPerformanceService.saveUser());
-        endTime = System.currentTimeMillis();
-        System.out.println("mongo: " + (endTime - startTime) / 1000.0 + " segundos");
 
-        startTime = System.currentTimeMillis();
-        //databaseDetailsAndExecutionTimes.add(mongoDBTemplatePerformanceService.saveUser());
-        endTime = System.currentTimeMillis();
-        System.out.println("template: " + (endTime - startTime) / 1000.0 + " segundos");
+        databaseDetailsAndExecutionTimes.add(mongoDBTemplatePerformanceService.saveUser());
 
         return resultFormatter.formatForAllResultString(databaseDetailsAndExecutionTimes,
                 "Performs a save operation to store a single user record in a full database, and calculates the average execution time.",
@@ -105,10 +87,10 @@ public class PerformanceCreateService implements IPerformanceCreateService {
 
         List<PerformanceResultGroup> performanceResultGroups = services.stream()
                 .map(service -> new PerformanceResultGroup(service.compareUpsertInsert()))
-                .collect(Collectors.toList());
+                .toList();
 
         return resultFormatter.formatForSpecificResultString(performanceResultGroups,
                 "Performs a comparison of upsert versus insert operations for user saving in the database, and calculates the average execution time.",
-                Constants.NUMBER_OF_ITERATIONS, Constants.NUMBER_OF_DATA);
+                Constants.NUMBER_OF_ITERATIONS, Constants.NUMBER_OF_DATA / 2);
     }
 }
